# codex_gigas

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  readme.md
.github/workflows/: build-and-deploy-production.yaml  build-and-deploy-sandbox.yaml  build-and-deploy-staging.yaml
src/: main.rs
